# Tree-View

./: README.md  package-lock.json  package.json  vite.config.js
src/: App.svelte  properties.html  stores.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: CreateEnt.svelte  DeleteEnt.svelte  G.svelte  Rename.svelte  Settings.svelte
